# PLLM

./: .gitignore  LICENSE  README.md  demo视频链接.txt  environment.yml  pre.md  pref.md  pyproject.toml  十日谈链接.txt
agents/: README.md  author.system.md  reviewer.system.md
docs/: Blender手动演示操作指南.md  LongBench-QA开关PLLM实验.md  PLLM项目报告.md  主流推理框架暂停恢复调研.md  十日谈.md  实验报告.md  数据面实现与待验收说明.md  演示视频脚本.md  部署说明.md
frontend/: app.js  index.html  styles.css
paper/: HiberFlow-ACM六页稿.md  HiberFlow-ACM四页稿.md
pllm/: __init__.py  api.py  benchmarks.py  capabilities.py  config.py  controller.py  cost_model.py  daemon.py  decode_residency.py  desktop.py  expert_catalog.py  expert_control.py  expert_dataplane.py  expert_residency.py  expert_runtime_client.py  expert_store.py  expert_trace.py  foreground.py  hibercache.py  hiberstate.py  host_moe_resume.py  models.py  monitor.py  pause_resume.py  peer_review.py  policy.py  route_adapter.py  route_forecast.py  route_mtp.py  route_mtp_runtime.py  route_mtp_torch.py  route_mtp_trace.py  ssd_resume_pack.py  storage.py  vllm.py  vllm_decode_trace_patch.py  vllm_eer_runtime.py
rdma_bridge/: CMakeLists.txt  README.md
rdma_bridge/src/: main.cpp  pool.cpp  store.cpp
results/: README.md  expert_trace_synthetic.jsonl  live-control-config.toml  mock_integration.json  nemotron_calibration.json  nemotron_eer128_continuity_level0.json  nemotron_eer128_determinism_control.json  nemotron_eer128_level1.json  nemotron_eer128_level2.json  nemotron_eer128_summary.json  nemotron_foreground_admission.json  rdma_bench.json  rdma_memory_pool_live_get_sharded.json  rdma_memory_pool_live_put_sharded.json  rdma_store_live.json
scripts/: __init__.py  analyze_experts.py  apply_vllm_hibercache_patch.py  benchmark_blender_qos.py  benchmark_continuity.py  benchmark_decode_routes.py  benchmark_foreground_admission.py  benchmark_host_moe_resume.py  benchmark_kv_pause_strategies.py  benchmark_longbench_qa.py  benchmark_pause_moe_cycles.py  benchmark_rdma_gpu_reload.py  benchmark_rdma_slot_pipeline.py  benchmark_rdma_stream.py  benchmark_residency_planner.py  benchmark_route_mtp_live.py  benchmark_route_mtp_probe.py  benchmark_sleep.py  benchmark_ssd_moe_resume.py  calibrate_agent.py  collect_route_mtp_traces.py  compare_longbench_qa.py  eer_runtime_ctl.py  evaluate_route_mtp_shadow.py  generate_expert_trace.py  hiberstate_ctl.py  inspect_route_mtp.py  install_gnome_extension.sh  install_user_services.sh  mock_vllm.py  plot_decode_locality.py  plot_host_moe_resume.py  (+24 more)
(+329 files in other folders)
